--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Axios -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
-  <body onload="start()">
+  <body onload="start() , getThreeDayForecast()">
     <div
       class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm"
     >
@@ -43,19 +43,19 @@
       </div>
     </div>
 
-    <div class="container">
+      <div class="container">
         <div class="card-deck mb-3 text-center">
           <div class="card mb-4 shadow-sm offset-sm-1">
             <div class="card-header">
               <h4 class="my-0 font-weight-normal">Aujourd'hui</h4>
             </div>
             <div class="card-body">
-              <h2 id="today-forecast-main" class="card-title">
+              <h2 id="0-forecast-main" class="card-title">
               </h2>
               <div>
-                <p id="today-forecast-more-info"></p>
-                <div id="icon-weather-container" ></div>
-                <h3 id="today-forecast-temp"> </h3>
+                <p id="0-forecast-more-info"></p>
+                <div id="0-icon-weather-container" ></div>
+                <h3 id="0-forecast-temp"> </h3>
               </div>
               <!-- <button type="button" class="btn btn-lg btn-block btn-primary button-load-forecast" onclick='start()'>
                 Quel temps fait'il aujourd'hui ?
@@ -63,7 +63,7 @@
             </div>
           </div>
         </div>
-
+      </div>
     <div class="container">
       <div class="card-deck mb-3 text-center">
         <div class="card mb-4 shadow-sm offset-sm-1">
@@ -71,12 +71,12 @@
             <h4 class="my-0 font-weight-normal">Demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="1-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="1-forecast-more-info"></p>
+              <div id="1-icon-weather-container" ></div>
+              <h3 id="1-forecast-temp"> </h3>
             </div>
           </div>
         </div>
@@ -85,12 +85,12 @@
             <h4 class="my-0 font-weight-normal">Après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="2-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="2-forecast-more-info"></p>
+              <div id="2-icon-weather-container" ></div>
+              <h3 id="2-forecast-temp"> </h3>
             </div>
           </div>
         </div>
@@ -99,12 +99,12 @@
             <h4 class="my-0 font-weight-normal">Encore après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="3-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="3-forecast-more-info"></p>
+              <div id="3-icon-weather-container" ></div>
+              <h3 id="3-forecast-temp"> </h3>
             </div>
           </div>
         </div>
